--- a/CSS/Fundamentals/Styling Complex Elements/style.css
+++ b/CSS/Fundamentals/Styling Complex Elements/style.css
@@ -42,3 +42,38 @@ button {
 button:hover {
     background-color: black;
 }
+
+/* Form settings */
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="number"],
+input[type="date"],
+textarea{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type="checkbox"],
+input[type="radio"] {
+    margin-right: 5px;
+    
+}
+
+button[type="reset"],
+button[type="submit"]
+{
+    background-color: green;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
